syntax = "proto3";

option go_package = "github.com/anshulrgoyal/grpc-gateway-demo;grpc_gateway_demo";


import "google/api/annotations.proto";
import "validate/validate.proto";


package hello_world;

message HelloRequest {
  string name = 1 [(validate.rules).string = {min_bytes:8, max_bytes: 256,}];
  string last_name =2;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
     get:"/v1/sayHello/{name}"
    };
  }
}

